Mildred League API almost cleaned up!
