# tarpeydev/api.py
@@ -3,8 +3,7 @@ import json
 import random
 
 # import third party packages
-from bson.json_util import dumps
-from flask import Blueprint, jsonify, make_response, request, url_for
+from flask import Blueprint, jsonify, request, url_for
 import pandas
 import pymongo
 
@@ -56,8 +55,24 @@ def search(search_term=None):
 def all_teams_data(api=False):
     client = get_dbm()
     db = client.mildredleague
+    collection = db.teams
     # return full history of mildredleague teams
-    data = list(db.teams.find())
+    data = list(collection.find())
+    if not data:
+        return "No data found!", 400
+    elif request.path.startswith('/api/') or api is True:
+        return jsonify(data), 200
+    else:
+        return data
+
+
+@api_bp.route('/mildredleague/all-games', methods=['GET'])
+def all_games_data(api=False):
+    client = get_dbm()
+    db = client.mildredleague
+    collection = db.games
+    # return full history of mildredleague games
+    data = list(collection.find())
     if not data:
         return "No data found!", 400
     elif request.path.startswith('/api/') or api is True:
@@ -108,7 +123,6 @@ def season_boxplot_transform(season, against, api=True):
             ),
             ignore_index=True,
         )
-        title_label = '(Points For)'
     # this code runs to analyze Points Against.
     if against == 'against':
         score_df = season_df[['a_nick', 'h_score_norm']].rename(
@@ -119,7 +133,6 @@ def season_boxplot_transform(season, against, api=True):
             ),
             ignore_index=True,
         )
-        title_label = '(Points Against)'
     # let's sort by playoff rank instead
     # read season file, but we only need nick_name, season, and playoff_rank
     ranking_df = pandas.DataFrame(teams_data.json)[['nick_name', 'season', 'playoff_rank']]
@@ -176,11 +189,11 @@ def season_boxplot_store(season, against):
             except pymongo.errors.DuplicateKeyError:
                 collection.replace_one({"_id": doc.get("_id")}, doc)
                 message, response_code = "Inserted " + str(doc.get("_id")) + ".", 400
-    
+
     return message, response_code
 
 
-@api_bp.route('/mildredleague/boxplot/<int:season>/<against>', methods=['GET'])
+@api_bp.route('/mildredleague/boxplot/<int:season>/<against>/get', methods=['GET'])
 def season_boxplot_retrieve(season, against, api=False):
     # fetch data from MongoDB
     client = get_dbm()
@@ -193,6 +206,56 @@ def season_boxplot_retrieve(season, against, api=False):
         return jsonify(data), 200
     else:
         return data
+
+
+@api_bp.route('/mildredleague/notes/<int:season>', methods=['POST'])
+def create_season_note(season):
+    # Flask stores plain text in request.data as bytes - need to convert
+    note = str(request.data, 'utf-8')
+
+    # fetch data from MongoDB
+    client = get_dbm()
+    db = client.mildredleague
+    collection = db.notes
+
+    # run aggregation to determine the id for the newest document
+    last_id_list = list(
+        collection.aggregate([{
+            '$group': {
+                '_id': None,
+                'last_id': {'$max': '$_id'}
+            }
+        }])
+    )
+    # if the list is empty, then the next id will be 1
+    # otherwise it's the last id + 1
+    if not last_id_list:
+        next_id = 1
+    else:
+        next_id = last_id_list[0].get('last_id') + 1
+
+    collection.insert_one({
+        "_id": next_id,
+        "season": season,
+        "note": note,
+    })
+    return str(season) + " note created: " + note, 200
+
+
+@api_bp.route('/mildredleague/notes/<int:season>/get', methods=['GET'])
+def read_season_notes(season):
+    # fetch data from MongoDB
+    client = get_dbm()
+    db = client.mildredleague
+    collection = db.notes
+    # return all results if no search_term
+    doc_list = list(collection.find({"season": season}))
+    if not doc_list:
+        return "No data found!", 400
+    elif request.path.startswith('/api/'):
+        return jsonify(doc_list), 200
+    else:
+        return doc_list
 
 
 @api_bp.route('/users', methods=['POST'])
